[metadata]
# replace with your username:
name = campay
version = 1.0.5
author = CamPay
author_email = info@campay.net
description = Payment Gateway
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CamPay/campay-python-sdk
project_urls =
    Bug Tracker = https://github.com/CamPay/campay-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src